# pocketlib

./: .gitignore  GUIDE_FROM_YOUTUBE.md  Integrating_zkp.md  app.json  babel.config.js  ios-check.sh  package-lock.json  package.json  tsconfig.json
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aramigu/pocketlib/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/expo/modules/proofmanager/: ProofManagerModule.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/uniffi/proofmanager/: proofmanager.kt
app/(tabs)/: index.tsx
interns_code/: lib.rs
ios/: Podfile
ios/ProofManager/: ProofManagerBridge.h  ProofManagerModule.swift  ProofManagerPlugin.swift
ios/ProofManager/ProofManager.xcframework/: Info.plist
ios/pocketlib/: Info.plist
ios/pocketlib.xcodeproj/: project.pbxproj
ios/pocketlib.xcodeproj/xcshareddata/xcschemes/: pocketlib.xcscheme
ios/pocketlib.xcworkspace/: contents.xcworkspacedata
modules/proofmanager/: app.plugin.js  expo-module.config.json  index.ts  package.json  plugin.js  tsconfig.json
modules/proofmanager/android/: build.gradle
modules/proofmanager/android/src/main/java/expo/modules/proofmanager/: ProofManagerModule.kt  ProofManagerView.kt
modules/proofmanager/android/src/main/uniffi/proofmanager/: proofmanager.kt
modules/proofmanager/ios/: ProofManager-Bridging-Header.h  ProofManager.podspec  ProofManagerModule.swift  ProofManagerView.swift  proofmanager.swift
modules/proofmanager/ios/ProofManager.xcframework/ios-arm64-simulator/Headers/: proofmanager.swift
modules/proofmanager/ios/ProofManager.xcframework/ios-arm64/Headers/: module.modulemap
modules/proofmanager/src/: ProofManager.types.ts  ProofManager.web.ts  ProofManagerModule.ts  ProofManagerModule.web.ts  ProofManagerView.tsx  ProofManagerView.web.tsx  index.ts
native_rust_lib/: Cargo.toml  build.rs  cbindgen.toml  makefile
native_rust_lib/.cargo/: config.toml
native_rust_lib/bindings/: proofmanagerFFI.h
native_rust_lib/bindings/uniffi/proofmanager/: proofmanager.kt
native_rust_lib/ios/ProofManager.xcframework/: Info.plist
native_rust_lib/src/: lib.rs  lib.rs.backup  r1cs.rs
native_rust_lib/src/note/: mod.rs
scripts/: cargo-android.ts  cargo-ios.ts
utils/: hex.ts
