[package]
name = "proofmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"


[lib]
crate-type = ["cdylib", "staticlib"]
name = "proofmanager"


[dependencies]
thiserror = "1.0"
jni = { version = "0.21.1", optional = false, default-features = false }
uniffi                           = { version = "0.28.3", features = ["build", "bindgen", "cli"] }
anyhow                           = { version = "1.0.94", default-features = false }
ark-ff                           = { version = "0.4.0", default-features = false }
ark-groth16                      = { version = "0.4.0", default-features = false }
ark-serialize                    = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-r1cs-std                     = { version = "0.4.0", default-features = false }
ark-relations                    = { version = "0.4.0", default-features = false }
ark-snark                        = { version = "0.4.0", default-features = false }
base64                           = { version = "0.21.7", default-features = false }
blake2b_simd                     = { version = "1.0.2", default-features = false }
decaf377                         = { version = "0.10.1", default-features = true }
decaf377-fmd                     = { version = "0.80.9", default-features = false }
decaf377-ka                      = { version = "0.80.9", default-features = false }
hex                              = { version = "0.4.3", default-features = false }
once_cell                        = { version = "1.20.2", default-features = false }
penumbra-asset                   = { version = "0.80.9", default-features = true }
penumbra-keys                    = { version = "0.80.9", default-features = true }
penumbra-proof-params            = { version = "0.80.9", default-features = false }
penumbra-num                     = { version = "0.80.9", default-features = false }
penumbra-proto                   = { version = "0.80.9", default-features = false }
penumbra-shielded-pool           = { version = "0.80.9", default-features = false }
penumbra-tct                     = { version = "0.80.9", default-features = false }
poseidon377                      = { version = "1.2.0", default-features = false }
rand_core                        = { version = "0.6.4", default-features = false }
serde                            = { version = "1.0.216", features = ["derive"], default-features = false }
tracing                          = { version = "0.1.41", default-features = false }
rand = "0.8.5"



[dev-dependencies]
proptest                         = { version = "1" }
penumbra-num                     = { version = "0.80.9", default-features = false }

[patch.crates-io]
decaf377-fmd                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
decaf377-ka                      = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-asset                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-keys                    = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-num                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proof-params            = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-proto                   = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-shielded-pool           = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-sct                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }
penumbra-tct                     = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.80.9" }


[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }
# uniffi_bindgen = "0.28.3"
# camino = "1.1.6"

# [dev-dependencies]
# uniffi = { version = "0.28.3", features = ["bindgen-tests"] }

# [[bin.uniffi-bindgen.dependencies]]
# uniffi = { version = "0.28.3", features = ["build"] }



[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
tracing-oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false, features = ["invocation"] }
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"