[package]
name = "proofmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "proofmanager"


[dependencies]
thiserror = "1.0"
jni = { version = "0.21.1", optional = false, default-features = false }
uniffi = { version = "0.28.3", features = ["build", "bindgen", "cli"] }
anyhow = { version = "1.0.94", default-features = false }
serde_json = "1.0.138"
ark-ff = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = [
    "derive",
] }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
base64 = { version = "0.21.7", default-features = false }
blake2b_simd = { version = "1.0.2", default-features = false }
decaf377 = { version = "0.10.1", default-features = true }
decaf377-rdsa = { version = "0.11.0", default-features = true }
decaf377-fmd = { version = "0.80.9", default-features = false }
decaf377-ka = { version = "0.80.9", default-features = false }
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.20.2", default-features = false }
penumbra-asset = { version = "0.80.9", default-features = true }
penumbra-keys = { version = "0.80.9", default-features = true }
penumbra-proof-params = { version = "0.80.9", default-features = false }
penumbra-num = { version = "0.80.9", default-features = false }
penumbra-proto = { version = "0.80.9", default-features = false }
penumbra-shielded-pool = { version = "0.80.9", default-features = false }
penumbra-tct = { version = "0.80.9", default-features = false }
poseidon377 = { version = "1.2.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.216", features = ["derive"], default-features = false }
tracing = { version = "0.1.41", default-features = false }
rand = "0.8.5"
cosmwasm-std = { version = "2.1.1", default-features = false, features = [
    "std",
] }
arkworks-gramine = { git = "https://github.com/informalsystems/cycles-sandbox.git", branch = "dangush/fork-deps" }

# cycles-contract                  = { path = "../../cycles-pocket/demo4/contracts", default-features = false }

[dev-dependencies]
proptest = { version = "1" }
penumbra-num = { version = "0.80.9", default-features = false }

[patch.crates-io]
decaf377 = { git = "https://github.com/hu55a1n1/decaf377.git" }
decaf377-ka = { version = "0.80.9", git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
decaf377-fmd = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
decaf377-rdsa = { git = "https://github.com/dangush/decaf377-rdsa.git", version = "0.11.0", default-features = true }
penumbra-asset = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-keys = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-num = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proof-params = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proof-setup = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-proto = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-shielded-pool = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
penumbra-tct = { git = "https://github.com/dangush/penumbra.git", branch = "v0.80.9-fork" }
poseidon377 = { git = "https://github.com/dangush/poseidon377.git", default-features = false }


[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
tracing-oslog = "0.2.0"
libc = "0.2.80"         # Allows to use c types CString, c_char, etc.


[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false, features = [
    "invocation",
] }
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"
