[package]
name = "proofmanager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "proofmanager"


[dependencies]
thiserror = "1.0"
jni                              = { version = "0.21.1", optional = false, default-features = false }
uniffi                           = { version = "0.28.3", features = ["build", "bindgen", "cli"] }
anyhow                           = { version = "1.0.94", default-features = false }
serde_json                       = "1.0.138"
bincode = "1.3.3"
android_logger = "=0.13.3"
log = "0.4"
ctor = "0.1"

ark-ff                           = { version = "0.4.0", default-features = false }
ark-groth16                      = { version = "0.4.0", default-features = false }
ark-serialize                    = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-r1cs-std                     = { version = "0.4.0", default-features = false }
ark-relations                    = { version = "0.4.0", default-features = false }
ark-snark                        = { version = "0.4.0", default-features = false }
arkworks-gramine                 = { git = "https://github.com/informalsystems/cycles-sandbox.git", branch = "dangush/fork-deps", default-features = false }
base64                           = { version = "0.21.7", default-features = false }
blake2b_simd                     = { version = "1.0.2", default-features = false }
decaf377                         = { git = "https://github.com/hu55a1n1/decaf377.git" }
decaf377-rdsa                    = { git = "https://github.com/dangush/decaf377-rdsa.git", version = "0.11.0", default-features = false }
hex                              = { version = "0.4.3", default-features = false }
once_cell                        = { version = "1.20.2", default-features = false }
decaf377-fmd                     = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
decaf377-ka                      = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-asset                   = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-keys                    = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-num                     = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-proof-params            = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-proto                   = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-shielded-pool           = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-sct                     = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
penumbra-tct                     = { git = "https://github.com/dangush/penumbra", branch = "v0.80.9-fork", default-features = false  }
poseidon377                      = { git = "https://github.com/dangush/poseidon377.git", default-features = false }
rand_core                        = { version = "0.6.4", default-features = false }
serde                            = { version = "1.0.216", features = ["derive"], default-features = false }
tracing                          = { version = "0.1.41", default-features = false }
rand = "0.8.5"
cosmwasm-std = "2.2.0"


[dev-dependencies]
proptest                         = { version = "1" }


[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
tracing-oslog = "0.2.0"
libc = "0.2.80" # Allows to use c types CString, c_char, etc.


[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false, features = ["invocation"] }
android_logger = "0.13"
ndk = "0.7"
ndk-context = "0.1"